<resources>
    <string name="app_name">My Videogames List</string>
    <!-- COMMON -->
    <string name="common_added_record_list">ADDED (R. LIST)</string>
    <string name="common_added_pending_list">ADDED (P. LIST)</string>

    <!-- SPLASH -->
    <string name="splash_subtitle">Created by Rodrigo Novoa</string>

    <!-- Username Dialog -->
    <string name="username_dialog_title">Introduce username</string>
    <string name="username_dialog_button">Continue</string>

    <!-- MENU -->
    <string name="menu_videogames_option">Videogames</string>
    <string name="menu_my_records_option">My Records</string>
    <string name="menu_pending_games_option">Pending Games</string>
    <string name="menu_user_configuration_option">Options</string>

    <!-- ADD RECORD -->
    <string name="add_record_title_placeholder">Videogame Title</string>
    <string name="add_record_subtitle">Record</string>
    <string name="add_record_from_date_error">You must select initial date</string>
    <string name="add_record_to_date_error">You must select complete date</string>

    <string name="add_record_from_date_title">From</string>
    <string name="add_record_to_date_title">To</string>
    <string name="add_record_score_title">Score (0 to 10)</string>
    <string name="add_record_notes_title">Note</string>

    <!-- ADD PENDING -->

    <string name="add_pending_spinner_state_1">Pending</string>
    <string name="add_pending_spinner_state_2">Ongoing</string>
    <string name="add_pending_add_button">Add</string>
    <string name="add_pending_types_title">Type</string>
    <string name="add_pending_notes_title">Notes</string>

    <!-- GAME DETAIL -->
    <string name="game_detail_add_to_record">ADD TO RECORDS</string>
    <string name="game_detail_add_to_pending">PENDING GAME</string>
    <string name="game_detail_game_title">GAME &#127918;</string>
    <string name="game_detail_info_title">INFO &#8505;</string>
    <string name="game_detail_description_title">DESCRIPTION &#128214;</string>
    <string name="game_detail_extra_title">EXTRA &#128009;</string>

    <string name="game_detail_info_release">Release Date: </string>
    <string name="game_detail_info_platforms">Platforms: </string>
    <string name="game_detail_info_publishers">Publisher/s: </string>
    <string name="game_detail_info_rate">ESRB Rating: </string>

    <!-- RECORD DETAIL -->

    <string name="record_detail_complete_dates">Complete Dates</string>
    <string name="record_detail_from_title">From</string>
    <string name="record_detail_to_title">To</string>
    <string name="record_detail_score_title">Score (out of 10)</string>
    <string name="record_detail_extra_title">Extra</string>
    <string name="record_detail_delete_button">Delete</string>

    <!-- COMMON LIST -->
    <string name="common_list_title_games">Games &#127918;</string>
    <string name="common_list_title_records">My Records</string>
    <string name="common_list_title_pending">Pending Games</string>
    <string name="common_list_metacritic">Metacritic: </string>
    <string name="common_list_complete_date">Completed on: </string>
    <string name="common_list_added_date">Added since: </string>

    <string name="common_list_dialog_title">Select an option</string>
    <string name="common_list_dialog_option_1">Game Detail</string>
    <string name="common_list_dialog_option_2">Game Record</string>

    <string name="common_list_pending_dialog_title">Do you want to delete this record?</string>
    <string name="common_list_pending_dialog_option_1">Delete</string>
    <string name="common_list_pending_dialog_option_2">Cancel</string>
</resources>