<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.gameDetail.GameDetailActivity"
    android:background="@color/color_secondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imv_game_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/image_placeholder" />

        <TextView
            android:id="@+id/tv_game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="32dp"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_secondary_complement_1"
                android:paddingLeft="5dp"
                android:text="@string/record_detail_complete_dates"
                android:textStyle="bold"
                android:textSize="24dp"/>

            <TextView
                android:id="@+id/tv_from_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:text="@string/record_detail_from_title"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_from_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:paddingLeft="15dp"
                android:layout_marginTop="2dp"
                android:text="" />

            <TextView
                android:id="@+id/tv_to_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/record_detail_to_title" />

            <TextView
                android:id="@+id/tv_to_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingLeft="15dp"
                android:textSize="18dp"
                android:text="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_secondary_complement_1"
                android:text="@string/record_detail_score_title"
                android:textStyle="bold"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                />

            <TextView
                android:id="@+id/tv_score_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="My Score" />

            <TextView
                android:id="@+id/tv_score_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="18dp"
                android:paddingLeft="15dp"
                android:text="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_secondary_complement_1"
                android:text="@string/record_detail_extra_title"
                android:textStyle="bold"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/tv_notes_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:paddingLeft="15dp"
                android:text="Notes" />

            <TextView
                android:id="@+id/tv_notes_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="18dp"
                android:paddingLeft="15dp"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_delete_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/record_detail_delete_button"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>